# hmpps-github-discovery

./: .gitignore  Dockerfile  README.md  am.json  check_ss.py  get-environments.py  get_actions.py  github_component_discovery.py  github_dependency_discovery.py  github_discovery.py  github_security_discovery.py  github_teams_discovery.py  github_workflow_discovery.py  github_workflows_discovery.py  main.py  migrate-to-local.py  pyproject.toml  requirements.txt  test-repo.py  test-trivy.py
.github/: dependabot.yml
.github/actions/cloud-platform-deploy/: action.yml
.github/workflows/: backup_repository.yml  build.yml  check_duplicates.yml  deploy.yml  deploy_env.yml  pipeline.yml  security_codeql_actions_scan.yml  security_codeql_python_scan.yml  security_snyk_scan.yml  security_trivy.yml  security_veracode_pipeline_scan.yml  security_veracode_policy_scan.yml
classes/: alertmanager.py  circleci.py  github.py  service_catalogue.py  slack.py
helm_deploy/: github_teams_discovery.py  values-dev.yaml  values-prod.yaml
helm_deploy/hmpps-github-discovery/: Chart.yaml  values.yaml
includes/: environments.py  github_api.py  helm.py  security_settings.py  standards.py  teams.py  utils.py  values.py  versions.py
models/: repository_info.py
processes/: artifacts.py  components.py  github_teams.py  products.py  scheduled_jobs.py  security.py  update_sc_scheduled_jobs.py  workflows.py
utilities/: check_duplicate_environments.py  check_github.py  compare-dev-prod.py  compare_dev_prod.py  error_handling.py  populate_tag.py  prod-to-local.py  prod_to_local.py
(+13 files in other folders)
