[project]
name = "hmpps-github-discovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dockerfile-parse==2.0.1",
    "hmpps-python-lib",
    "pygithub==2.6.1",
    "pyyaml==6.0.1",
    "requests==2.32.5",
    "slack-sdk==3.36.0",
]

[tool.uv.sources]
hmpps-python-lib = { url = "https://github.com/ministryofjustice/hmpps-python-lib/releases/download/v0.0.2/hmpps_python_lib-0.0.2-py3-none-any.whl" }
